--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "test:watch": "jest --config jest.test.config.js --watch"
   },
   "dependencies": {
-    "@sindresorhus/string-hash": "1.0.0",
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
@@ -70,7 +69,6 @@
     "prop-types": "15.6.2",
     "react-required-if": "1.0.3",
     "recompose": "0.30.0",
-    "style-inject": "0.3.0",
     "tiny-invariant": "1.0.1",
     "warning": "4.0.2"
   },
@@ -99,6 +97,7 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
+    "babel-plugin-emotion": "9.2.11",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.19",
@@ -110,6 +109,7 @@
     "cross-env": "5.2.0",
     "css": "2.2.4",
     "css-loader": "1.0.0",
+    "emotion": "9.2.12",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "enzyme-to-json": "3.3.4",
@@ -195,6 +195,7 @@
     "webpack": "4.21.0"
   },
   "peerDependencies": {
+    "emotion": "^9.1.2",
     "flatpickr": ">4.5.0",
     "moment": ">2.2",
     "moment-timezone": "^0.5",
