--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
-    "downshift": "2.2.3",
+    "downshift": "3.1.1",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
     "lodash.has": "4.5.2",
@@ -97,6 +97,7 @@
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
+    "babel-plugin-emotion": "9.2.11",
     "babel-plugin-react-intl": "3.0.1",
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.19",
@@ -108,6 +109,7 @@
     "cross-env": "5.2.0",
     "css": "2.2.4",
     "css-loader": "1.0.0",
+    "emotion": "9.2.12",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "enzyme-to-json": "3.3.4",
@@ -183,16 +185,17 @@
     "rollup-plugin-replace": "2.1.0",
     "rollup-plugin-url": "2.0.1",
     "shelljs": "0.8.2",
-    "storybook-readme": "4.0.0-beta1",
+    "storybook-readme": "4.0.2",
     "style-loader": "0.23.1",
-    "styled-components": "3.4.10",
+    "styled-components": "4.0.2",
     "stylelint": "9.6.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
     "url-loader": "1.1.2",
-    "webpack": "4.20.2"
+    "webpack": "4.21.0"
   },
   "peerDependencies": {
+    "emotion": "^9.1.2",
     "flatpickr": ">4.5.0",
     "moment": ">2.2",
     "moment-timezone": "^0.5",
@@ -202,8 +205,7 @@
     "react-router-dom": ">=4",
     "react-select": ">2.1.0",
     "react-textarea-autosize": ">7.0.0",
-    "react-virtualized": ">9.0.0",
-    "styled-components": ">3.4.0"
+    "react-virtualized": ">9.0.0"
   },
   "husky": {
     "hooks": {
