--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "dist",
     "i18n",
     "images",
-    "materials/imports.css",
-    "materials/imports.js",
+    "materials/custom-properties.css",
+    "materials/custom-properties.json",
     "materials/media-queries.mod.css",
     "CHANGELOG.md",
     "./README.md",
@@ -36,7 +36,7 @@
   ],
   "scripts": {
     "changelog": "conventional-changelog -p angular -u",
-    "prebuild": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js node ./scripts/extract-materials.js",
+    "prebuild": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js && node ./scripts/extract-materials.js",
     "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
     "storybook:build": "build-storybook -o .public",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup -c",
