--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "common-tags": "1.8.0",
     "dom-helpers": "3.3.1",
     "downshift": "3.1.1",
+    "emotion": "9.2.12",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
     "lodash.has": "4.5.2",
@@ -67,6 +68,7 @@
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
     "prop-types": "15.6.2",
+    "react-emotion": "9.2.12",
     "react-required-if": "1.0.3",
     "recompose": "0.30.0",
     "tiny-invariant": "1.0.1",
@@ -109,7 +111,6 @@
     "cross-env": "5.2.0",
     "css": "2.2.4",
     "css-loader": "1.0.0",
-    "emotion": "9.2.12",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "enzyme-to-json": "3.3.4",
@@ -187,7 +188,6 @@
     "shelljs": "0.8.2",
     "storybook-readme": "4.0.2",
     "style-loader": "0.23.1",
-    "styled-components": "4.0.2",
     "stylelint": "9.6.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
@@ -195,7 +195,6 @@
     "webpack": "4.21.0"
   },
   "peerDependencies": {
-    "emotion": "^9.1.2",
     "flatpickr": ">4.5.0",
     "moment": ">2.2",
     "moment-timezone": "^0.5",
