--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "storybook:build": "build-storybook -o .public",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
     "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
+    "playground": "webpack-dev-server --config playground/webpack.config.js --watch",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002",
     "docs:publish": "node scripts/publish-docs.js",
@@ -77,6 +78,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/plugin-proposal-do-expressions": "7.0.0",
     "@babel/plugin-proposal-export-default-from": "7.0.0",
     "@babel/plugin-proposal-export-namespace-from": "7.0.0",
@@ -84,6 +86,9 @@
     "@babel/plugin-proposal-optional-chaining": "7.0.0",
     "@babel/plugin-transform-destructuring": "7.1.3",
     "@babel/plugin-transform-react-constant-elements": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
     "@commercetools/enzyme-extensions": "3.0.1",
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
@@ -131,6 +136,7 @@
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
     "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
     "husky": "1.1.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -194,7 +200,9 @@
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
     "url-loader": "1.1.2",
-    "webpack": "4.23.1"
+    "webpack": "4.23.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10"
   },
   "peerDependencies": {
     "flatpickr": ">4.5.0",
