--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ cache:
     - node_modules
 
 script:
+  # the jest.bundle.config.js tests run on the bundle,
+  # so we need to build it first
+  - yarn build
   - yarn run jest --projects jest.*.config.js --maxWorkers=4 --reporters jest-silent-reporter
   - "! test -f fail-tests-because-there-was-an-unhandled-rejection.lock"
 
