--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ typings/
 
 # File used to fail tests on CI
 fail-tests-because-there-was-an-unhandled-rejection.lock
+
+# Visual Regression Testing
+__diff_output__ 
