--- a/package.json
+++ b/package.json
@@ -139,13 +139,16 @@
     "jest": "23.6.0",
     "jest-dom": "2.1.0",
     "jest-enzyme": "7.0.0",
+    "jest-image-snapshot": "2.6.0",
     "jest-localstorage-mock": "2.2.0",
     "jest-plugin-filename": "0.0.1",
     "jest-runner-eslint": "0.6.0",
     "jest-runner-stylelint": "1.0.0",
     "jest-silent-reporter": "0.1.1",
+    "jest-transform-css": "2.0.0",
     "jest-validate": "23.6.0",
     "jest-watch-master": "1.0.0",
+    "jsdom-screenshot": "3.0.2",
     "lint-staged": "7.3.0",
     "lodash.camelcase": "4.3.0",
     "lodash.pick": "4.4.0",
