--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@storybook/react": "4.0.0",
     "@svgr/rollup": "3.1.0",
     "@svgr/webpack": "3.1.0",
+    "aws-sdk": "2.344.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
@@ -114,6 +115,7 @@
     "babel-plugin-transform-react-remove-prop-types": "0.4.19",
     "babel-preset-jest": "23.2.0",
     "browserslist": "4.3.4",
+    "chalk": "2.4.1",
     "colors": "1.3.2",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.5",
@@ -135,6 +137,7 @@
     "eslint-plugin-react": "7.11.1",
     "flatpickr": "4.5.2",
     "formik": "1.3.1",
+    "git-branch": "2.0.1",
     "glob": "7.1.3",
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
