--- a/package.json
+++ b/package.json
@@ -88,12 +88,12 @@
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
-    "@storybook/addon-actions": "4.0.0-alpha.20",
-    "@storybook/addon-info": "4.0.0-alpha.20",
+    "@storybook/addon-actions": "4.0.0",
+    "@storybook/addon-info": "4.0.0",
     "@storybook/addon-knobs": "4.0.0-alpha.20",
-    "@storybook/addon-links": "4.0.0-alpha.20",
-    "@storybook/addon-options": "4.0.0-alpha.20",
-    "@storybook/react": "4.0.0-alpha.20",
+    "@storybook/addon-links": "4.0.0",
+    "@storybook/addon-options": "4.0.0",
+    "@storybook/react": "4.0.0",
     "@svgr/rollup": "3.1.0",
     "@svgr/webpack": "3.1.0",
     "babel-core": "7.0.0-bridge.0",
@@ -105,7 +105,7 @@
     "babel-plugin-transform-dynamic-import": "2.1.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.19",
     "babel-preset-jest": "23.2.0",
-    "browserslist": "4.2.1",
+    "browserslist": "4.3.4",
     "colors": "1.3.2",
     "common-tags": "1.8.0",
     "conventional-changelog-cli": "2.0.5",
@@ -115,12 +115,12 @@
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "enzyme-to-json": "3.3.4",
-    "eslint": "5.7.0",
+    "eslint": "5.8.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.1.0",
     "eslint-formatter-pretty": "1.3.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "21.25.1",
+    "eslint-plugin-jest": "21.26.2",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-prettier": "3.0.0",
@@ -136,9 +136,9 @@
     "jest": "23.6.0",
     "jest-dom": "2.1.0",
     "jest-enzyme": "7.0.0",
-    "jest-localstorage-mock": "2.2.0",
+    "jest-localstorage-mock": "2.3.0",
     "jest-plugin-filename": "0.0.1",
-    "jest-runner-eslint": "0.6.0",
+    "jest-runner-eslint": "0.7.1",
     "jest-runner-stylelint": "1.0.0",
     "jest-silent-reporter": "0.1.1",
     "jest-validate": "23.6.0",
@@ -149,32 +149,32 @@
     "lodash.upperfirst": "4.3.1",
     "markdown-loader": "4.0.0",
     "moment": "2.22.2",
-    "moment-timezone": "0.5.21",
+    "moment-timezone": "0.5.23",
     "mri": "1.1.1",
     "omit-empty": "0.4.1",
     "pegjs": "0.10.0",
     "postcss": "7.0.5",
     "postcss-color-mod-function": "3.0.3",
     "postcss-css-variables": "0.11.0",
-    "postcss-custom-media": "7.0.6",
+    "postcss-custom-media": "7.0.7",
     "postcss-custom-properties": "8.0.8",
     "postcss-discard-comments": "4.0.1",
-    "postcss-import": "12.0.0",
+    "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.1.1",
+    "postcss-preset-env": "6.3.0",
     "postcss-reporter": "6.0.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "1.14.3",
     "rcfile": "1.0.3",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-intl": "2.7.1",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
+    "react-intl": "2.7.2",
     "react-router-dom": "4.3.1",
-    "react-select": "2.1.0",
-    "react-testing-library": "5.2.0",
-    "react-textarea-autosize": "7.0.4",
+    "react-select": "2.1.1",
+    "react-testing-library": "5.2.3",
+    "react-textarea-autosize": "7.1.0-1",
     "react-value": "0.2.0",
-    "react-virtualized": "9.20.1",
+    "react-virtualized": "9.21.0",
     "rimraf": "2.6.2",
     "rollup": "0.66.6",
     "rollup-plugin-babel": "4.0.3",
@@ -190,11 +190,11 @@
     "shelljs": "0.8.2",
     "storybook-readme": "4.0.2",
     "style-loader": "0.23.1",
-    "stylelint": "9.6.0",
+    "stylelint": "9.7.0",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
     "url-loader": "1.1.2",
-    "webpack": "4.21.0"
+    "webpack": "4.23.1"
   },
   "peerDependencies": {
     "flatpickr": ">4.5.0",
