--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ fail-tests-because-there-was-an-unhandled-rejection.lock
 
 # Visual Regression Testing
 __diff_output__ 
+
+# percy.io
+.percy-debug
