--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
+    "@percy/react": "0.4.6",
     "@storybook/addon-actions": "4.0.0",
     "@storybook/addon-info": "4.0.0",
     "@storybook/addon-knobs": "4.0.0-alpha.20",
