--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "dependencies": {
     "classnames": "2.2.6",
     "common-tags": "1.8.0",
-    "dom-helpers": "3.3.1",
+    "dom-helpers": "3.4.0",
     "emotion": "9.2.12",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
@@ -75,7 +75,7 @@
     "react-emotion": "9.2.12",
     "react-required-if": "1.0.3",
     "recompose": "0.30.0",
-    "tiny-invariant": "1.0.1",
+    "tiny-invariant": "1.0.2",
     "warning": "4.0.2"
   },
   "devDependencies": {
@@ -95,14 +95,14 @@
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
-    "@storybook/addon-actions": "4.0.0",
-    "@storybook/addon-info": "4.0.0",
-    "@storybook/addon-knobs": "4.0.0-alpha.20",
-    "@storybook/addon-links": "4.0.0",
-    "@storybook/addon-options": "4.0.0",
-    "@storybook/react": "4.0.0",
-    "@svgr/rollup": "3.1.0",
-    "@svgr/webpack": "3.1.0",
+    "@storybook/addon-actions": "4.0.2",
+    "@storybook/addon-info": "4.0.2",
+    "@storybook/addon-knobs": "4.0.2",
+    "@storybook/addon-links": "4.0.2",
+    "@storybook/addon-options": "4.0.2",
+    "@storybook/react": "4.0.2",
+    "@svgr/rollup": "4.0.0",
+    "@svgr/webpack": "4.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
@@ -116,10 +116,10 @@
     "browserslist": "4.3.4",
     "colors": "1.3.2",
     "common-tags": "1.8.0",
-    "conventional-changelog-cli": "2.0.5",
+    "conventional-changelog-cli": "2.0.11",
     "cross-env": "5.2.0",
     "css": "2.2.4",
-    "css-loader": "1.0.0",
+    "css-loader": "1.0.1",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.6.0",
     "enzyme-to-json": "3.3.4",
@@ -128,7 +128,7 @@
     "eslint-config-prettier": "3.1.0",
     "eslint-formatter-pretty": "1.3.0",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "21.26.2",
+    "eslint-plugin-jest": "21.27.1",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-prettier": "3.0.0",
@@ -140,11 +140,11 @@
     "graphql-tag": "2.10.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.1.2",
+    "husky": "1.1.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-dom": "2.1.0",
-    "jest-enzyme": "7.0.0",
+    "jest-enzyme": "7.0.1",
     "jest-localstorage-mock": "2.3.0",
     "jest-plugin-filename": "0.0.1",
     "jest-runner-eslint": "0.7.1",
@@ -152,7 +152,7 @@
     "jest-silent-reporter": "0.1.1",
     "jest-validate": "23.6.0",
     "jest-watch-master": "1.0.0",
-    "lint-staged": "7.3.0",
+    "lint-staged": "8.0.4",
     "lodash.camelcase": "4.3.0",
     "lodash.pick": "4.4.0",
     "lodash.upperfirst": "4.3.1",
@@ -185,7 +185,7 @@
     "react-value": "0.2.0",
     "react-virtualized": "9.21.0",
     "rimraf": "2.6.2",
-    "rollup": "0.66.6",
+    "rollup": "0.67.0",
     "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-cleanup": "3.0.0",
     "rollup-plugin-commonjs": "9.2.0",
@@ -199,11 +199,11 @@
     "shelljs": "0.8.2",
     "storybook-readme": "4.0.2",
     "style-loader": "0.23.1",
-    "stylelint": "9.7.0",
+    "stylelint": "9.7.1",
     "stylelint-config-standard": "18.2.0",
     "stylelint-order": "1.0.0",
     "url-loader": "1.1.2",
-    "webpack": "4.23.1",
+    "webpack": "4.25.0",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
   },
