--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "changelog": "conventional-changelog -p angular -u",
     "prebuild": "node ./scripts/generate-icon-exports.js && node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js && node ./scripts/extract-materials.js",
     "prestorybook:start": "node ./scripts/generate-base-colors.js && node ./scripts/generate-base-shadows.js && node ./scripts/generate-colors-for-story.js",
-    "storybook:build": "build-storybook -o .public",
+    "storybook:build": "build-storybook -o .public -s docs/assets",
     "build": "rimraf dist && cross-env NODE_ENV=production rollup --config",
     "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
     "playground": "webpack-dev-server --config playground/webpack.config.js --watch",
     "start": "yarn storybook:start",
-    "storybook:start": "start-storybook -p 9002",
+    "storybook:start": "start-storybook -p 9002 -s docs/assets",
     "docs:publish": "node scripts/publish-docs.js",
     "i18n:build": "node scripts/extract-intl.js --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
     "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
