--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
     "emotion": "9.2.12",
+    "flatpickr": "4.5.2",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
     "lodash.has": "4.5.2",
@@ -74,6 +75,9 @@
     "prop-types": "15.6.2",
     "react-emotion": "9.2.12",
     "react-required-if": "1.0.3",
+    "react-select": "2.1.1",
+    "react-textarea-autosize": "7.1.0-1",
+    "react-virtualized": "9.21.0",
     "recompose": "0.30.0",
     "tiny-invariant": "1.0.3",
     "warning": "4.0.2"
@@ -133,7 +137,6 @@
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
-    "flatpickr": "4.5.2",
     "formik": "1.3.2",
     "glob": "7.1.3",
     "graphql": "14.0.2",
@@ -179,11 +182,8 @@
     "react-dom": "16.6.3",
     "react-intl": "2.7.2",
     "react-router-dom": "4.3.1",
-    "react-select": "2.1.1",
     "react-testing-library": "5.2.3",
-    "react-textarea-autosize": "7.1.0-1",
     "react-value": "0.2.0",
-    "react-virtualized": "9.21.0",
     "rimraf": "2.6.2",
     "rollup": "0.67.3",
     "rollup-plugin-babel": "4.0.3",
@@ -208,16 +208,12 @@
     "webpack-dev-server": "3.1.10"
   },
   "peerDependencies": {
-    "flatpickr": ">4.5.0",
     "moment": ">2.2",
     "moment-timezone": "^0.5",
     "react": ">=16",
     "react-dom": ">=16",
     "react-intl": ">=2",
-    "react-router-dom": ">=4",
-    "react-select": ">2.1.0",
-    "react-textarea-autosize": ">7.0.0",
-    "react-virtualized": ">9.0.0"
+    "react-router-dom": ">=4"
   },
   "husky": {
     "hooks": {
