--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "test": "jest --config jest.test.config.js",
     "test:watch": "jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
-    "test:bundle:watch": "jest --config jest.bundle.config.js --watch"
+    "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
+    "percy": "react-percy"
   },
   "dependencies": {
     "classnames": "2.2.6",
@@ -99,6 +100,7 @@
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
+    "@percy/react": "0.4.6",
     "@storybook/addon-actions": "4.0.9",
     "@storybook/addon-info": "4.0.9",
     "@storybook/addon-knobs": "4.0.9",
@@ -137,6 +139,7 @@
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-react-percy": "0.2.4",
     "formik": "1.3.2",
     "glob": "7.1.3",
     "graphql": "14.0.2",
