--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "test:watch": "jest --config jest.test.config.js --watch",
     "test:bundle": "jest --config jest.bundle.config.js",
     "test:bundle:watch": "jest --config jest.bundle.config.js --watch",
-    "percy": "react-percy"
+    "snapshot": "build-storybook && percy-storybook --widths=1280"
   },
   "dependencies": {
     "classnames": "2.2.6",
@@ -100,6 +100,7 @@
     "@commercetools/jest-enzyme-matchers": "1.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
+    "@percy-io/percy-storybook": "2.1.0",
     "@percy/react": "0.4.6",
     "@storybook/addon-actions": "4.0.9",
     "@storybook/addon-info": "4.0.9",
