--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "common-tags": "1.8.0",
     "dom-helpers": "3.4.0",
     "downshift": "3.1.5",
+    "classnames": "2.2.6",
+    "common-tags": "1.8.0",
+    "dom-helpers": "3.4.0",
     "flatpickr": "4.5.2",
     "is-touch-device": "1.0.1",
     "lodash.flatmap": "4.5.0",
