--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,12 @@ cache:
 script:
   # the jest.bundle.config.js tests run on the bundle,
   # so we need to build it first
+  - set -e
   - yarn build
   - yarn run jest --projects jest.*.config.js --maxWorkers=4 --reporters jest-silent-reporter
   - yarn percy
   - "! test -f fail-tests-because-there-was-an-unhandled-rejection.lock"
+  - set +e
 
 before_deploy: yarn build
 
