--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
     "docs:publish": "node scripts/publish-docs.js",
     "i18n:build": "node scripts/extract-intl.js --output-path=$(pwd)/i18n 'src/components/**/!(*.spec).js'",
-    "lint": "jest --projects jest.eslint.config.js jest.stylelint.config.js",
-    "lint:js": "jest --config jest.eslint.config.js",
+    "lint": "jest --projects jest.tslint.config.js jest.stylelint.config.js",
+    "lint:js": "jest --config jest.tslint.config.js",
     "lint:css": "jest --config jest.stylelint.config.js",
     "format:js": "prettier --write '**/*.js'",
     "format:css": "prettier --write --parser css '**/*.css'",
@@ -127,7 +127,6 @@
     "@wessberg/rollup-plugin-ts": "1.1.18",
     "awesome-typescript-loader": "5.2.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.5",
     "babel-plugin-emotion": "10.0.6",
@@ -147,16 +146,6 @@
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
     "enzyme-to-json": "3.3.5",
-    "eslint": "5.12.1",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-config-prettier": "3.6.0",
-    "eslint-formatter-pretty": "2.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "22.1.3",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prefer-object-spread": "1.2.1",
-    "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-react": "7.12.4",
     "formik": "1.4.2",
     "glob": "7.1.3",
     "history": "4.7.2",
@@ -170,8 +159,8 @@
     "jest-localstorage-mock": "2.4.0",
     "jest-plugin-filename": "0.0.1",
     "jest-puppeteer": "3.8.0",
-    "jest-runner-eslint": "0.7.1",
     "jest-runner-stylelint": "1.0.0",
+    "jest-runner-tslint": "1.0.5",
     "jest-silent-reporter": "0.1.1",
     "jest-validate": "23.6.0",
     "jest-watch-master": "1.0.0",
@@ -226,6 +215,10 @@
     "stylelint-order": "2.0.0",
     "ts-jest": "23.10.5",
     "tslib": "1.9.3",
+    "tslint": "5.12.1",
+    "tslint-config-prettier": "1.17.0",
+    "tslint-eslint-rules": "5.4.0",
+    "tslint-react": "3.6.0",
     "typescript": "3.2.4",
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
