--- a/package.json
+++ b/package.json
@@ -90,14 +90,15 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
     "@babel/plugin-proposal-export-default-from": "7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.1",
     "@babel/plugin-transform-destructuring": "7.2.0",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.2.3",
+    "@babel/preset-env": "7.3.1",
+    "@babel/preset-typescript": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "@commercetools/enzyme-extensions": "4.0.0",
     "@commercetools/jest-enzyme-matchers": "1.1.2",
@@ -125,7 +126,6 @@
     "@types/react-intl": "2.3.15",
     "@types/react-router-dom": "4.3.1",
     "@wessberg/rollup-plugin-ts": "1.1.18",
-    "awesome-typescript-loader": "5.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.5",
@@ -219,7 +219,6 @@
     "tslint-config-prettier": "1.17.0",
     "tslint-eslint-rules": "5.4.0",
     "tslint-react": "3.6.0",
-    "typescript": "3.2.4",
     "url-loader": "1.1.2",
     "webpack": "4.29.0",
     "webpack-cli": "3.2.1",
