--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "lodash.upperfirst": "4.3.1",
     "markdown-loader": "5.0.0",
     "moment": "2.23.0",
+    "moment-locales-webpack-plugin": "1.0.7",
     "moment-timezone": "0.5.23",
     "mri": "1.1.4",
     "omit-empty": "1.0.0",
