--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@svgr/webpack": "4.1.0",
     "@types/classnames": "2.2.7",
     "@types/enzyme": "3.1.15",
+    "@types/recompose": "0.30.0",
     "@types/enzyme-adapter-react-16": "1.0.3",
     "@types/history": "4.7.2",
     "@types/jest": "23.3.13",
