--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lodash.isnil": "4.0.0",
     "lodash.mapvalues": "4.6.0",
     "lodash.omit": "4.5.0",
+    "lodash.flowright": "3.5.0",
     "lodash.sortby": "4.7.0",
     "lodash.uniq": "4.5.0",
     "lodash.without": "4.4.0",
