--- a/materials/internals/definition.yaml
+++ b/materials/internals/definition.yaml
@@ -72,7 +72,7 @@ choiceGroups:
     label: Font sizes
     prefix: font-size
     choices:
-      font-size-m: '13px'
+      font-size-m: '1rem'
   shadows:
     label: Shadows
     prefix: shadow
@@ -402,7 +402,7 @@ plainTokens:
   shadow-15-first: '0 2px 2px rgba(0, 0, 0, 0.24)'
   shadow-15-second: '0 1px 4.75px rgba(0, 0, 0, 0.12)'
   font-family-default: "'Open Sans', sans-serif"
-  font-size-default: 13px
+  font-size-default: 1rem
   font-size-small: 12px
   shadow-box-tag-hover: '0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)'
   size-height-tag: 26px
