--- a/package.json
+++ b/package.json
@@ -198,12 +198,12 @@
     "yaml-loader": "0.5.0"
   },
   "peerDependencies": {
-    "moment": ">2.2",
-    "moment-timezone": "^0.5",
-    "react": ">=16",
-    "react-dom": ">=16",
-    "react-intl": ">=2",
-    "react-router-dom": ">=4"
+    "moment": "2.x",
+    "moment-timezone": "0.5.x",
+    "react": "16.x",
+    "react-dom": "16.x",
+    "react-intl": "2.x",
+    "react-router-dom": "4.x"
   },
   "husky": {
     "hooks": {
