--- a/packages/components/buttons/preset/package.json
+++ b/packages/components/buttons/preset/package.json
@@ -15,6 +15,12 @@
     "@emotion/styled": "10.0.23",
     "@emotion/core": "10.0.22",
     "@commercetools-uikit/accessible-button": "*",
+    "@commercetools-uikit/flat-button": "*",
+    "@commercetools-uikit/icon-button": "*",
+    "@commercetools-uikit/link-button": "*",
+    "@commercetools-uikit/secondary-button": "*",
+    "@commercetools-uikit/secondary-icon-button": "*",
+    "@commercetools-uikit/primary-button": "*",
     "@commercetools-uikit/design-system": "*",
     "@commercetools-uikit/flat-button": "*",
     "@commercetools-uikit/spacings": "*",
