--- a/packages/components/buttons/secondary-button/package.json
+++ b/packages/components/buttons/secondary-button/package.json
@@ -16,13 +16,14 @@
     "@emotion/core": "10.0.22",
     "@commercetools-uikit/accessible-button": "*",
     "@commercetools-uikit/design-system": "*",
-    "@commercetools-uikit/spacings": "*",
+    "@commercetools-uikit/spacings-inline": "*",
     "@commercetools-uikit/text": "*",
     "@commercetools-uikit/utils": "*",
     "common-tags": "1.8.0",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
-    "react-required-if": "1.0.3"
+    "react-required-if": "1.0.3",
+    "tiny-invariant": "1.0.6"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
