--- a/packages/components/tooltip/package.json
+++ b/packages/components/tooltip/package.json
@@ -6,7 +6,7 @@
   "module": "dist/tooltip.esm.js",
   "scripts": {
     "prebuild": "rimraf dist/**",
-    "build": "cross-env NODE_ENV=production rollup -c ../../rollup.config.js -i ./index.js"
+    "build": "cross-env NODE_ENV=production rollup -c ../../../rollup.config.js -i ./index.js"
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "@emotion/core": "10.0.22",
     "@emotion/styled": "10.0.23",
     "@commercetools-uikit/design-system": "*",
+    "@commercetools-uikit/hooks": "*",
     "@commercetools-uikit/utils": "*",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
