--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prebuild": "yarn generate-icons && yarn design-tokens:build",
     "prestorybook:start": "node ./scripts/generate-icon-exports.js && yarn design-tokens:build",
     "storybook:build": "NODE_ENV=production build-storybook -o .public -s docs/assets",
-    "build": "yarn workspaces run build",
+    "build": "NODE_ENV=production lerna run build --parallel --no-private",
     "build:watch": "rimraf dist && cross-env NODE_ENV=production rollup --config --watch",
     "start": "yarn storybook:start",
     "storybook:start": "start-storybook -p 9002 -s docs/assets",
@@ -151,6 +151,7 @@
     "jest-watch-master": "1.0.0",
     "jest-watch-typeahead": "0.4.2",
     "json-loader": "0.5.7",
+    "lerna": "3.19.0",
     "lint-staged": "9.4.3",
     "markdown-loader": "5.1.0",
     "moment": "2.24.0",
